remove limiting of indices